updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Austin im 23, and studying to be a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I've moved many times, but lived the longest in california.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Some of my favorite hobbies are rock climbing, camping, and hiking. I also enjoy playing around on the computer making videos. Which is one reason I am attracted to working in the computer field.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would have to be a job that I get to program from home. Maybe have my own buesiness building websites.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently I live in Riverside, California.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Ever since I took a game development class in highschool, I've been wanting to pursue a career in coding. </p>
     </section>
 
     <footer id="footer">
